# logistics_agents

./: .gitignore  README.md  docker-compose.deploy.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  nightly-eval.yml
dashboard/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.css  App.test.tsx  App.tsx  main.tsx
deploy/: Dockerfile  entrypoint.sh
evals/: dataset.py  results.py  run.py  runner.py
evals/graders/: composite.py  deterministic.py  judge.py
infra/: .gitignore  README.md  cloudfront.tf  compute.tf  main.tf  outputs.tf  s3.tf  user_data.sh.tftpl  variables.tf  versions.tf
resume/: README.md  Rob_Randhawa_Resume.html  render.py
tests/: conftest.py  test_smoke.py
tests/agents/: conftest.py  test_carrier.py  test_contracts.py  test_inventory.py  test_reasoning_agents.py
tests/api/: conftest.py  test_budget_endpoint.py  test_deps.py  test_guards.py  test_health.py  test_read_endpoints.py  test_stream.py  test_trigger.py
tests/data/: conftest.py  test_bootstrap.py  test_budget_repository.py  test_kafka_io.py  test_repository.py  test_repository_m3.py  test_schema.py  test_seed.py
tests/domain/: test_models_core.py  test_models_results.py
tests/evals/: test_composite.py  test_dataset.py  test_deterministic_graders.py  test_judge.py  test_regression.py  test_results.py  test_run_entry.py  test_runner.py
tests/llm/: conftest.py  test_anthropic_transport.py  test_cache.py  test_client.py  test_pricing.py  test_types.py
tests/orchestration/: test_runner.py
(+70 files in other folders)
