[project]
name = "logistics-agents"
version = "0.1.0"
description = "Multi-agent logistics decisioning system with eval infrastructure"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "psycopg[binary]>=3.1",
    "confluent-kafka>=2.3",
    "anthropic>=0.116.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "testcontainers[postgres,kafka]>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/logistics_agents"]

[tool.hatch.build.targets.wheel.force-include]
"src/logistics_agents/data/schema.sql" = "logistics_agents/data/schema.sql"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
